small updates to drift experiment notebooks

--- a/Drift experiments Alibi ChiSquared.ipynb
+++ b/Drift experiments Alibi ChiSquared.ipynb
@@ -13,14 +13,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pickle\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "from detectors.AlibiChiSquaredDetector import AlibiChiSquaredDetector"
+    "from detectors.AlibiChiSquaredDetector import AlibiChiSquaredDetector\n",
+    "import numpy as np"
    ]
   },
   {
@@ -32,34 +33,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Robert\n",
-    "file = 'data/movies/embeddings/amazon_small_gradual_drift.pickle'\n",
+    "file = 'data/movies/embeddings/amazon_bert_finetuned_b.pickle'\n",
     "\n",
     "# EML4U Experiment server\n",
-    "file = '../../data/amazon/amazon_small_gradual_drift.pickle'\n",
+    "#file = '../../data/amazon/amazon_small_gradual_drift.pickle'\n",
     "\n",
     "with open(file, 'rb') as handle:\n",
-    "    gradual_dict = pickle.load(handle)"
+    "    gradual_dict = pickle.load(handle)\n",
+    "    \n",
+    "target_percentages = [0, 0.005, 0.01, 0.02, 0.04, 0.1, 0.2, 0.4, 0.6, 0.8, 1.0, 2.0, 4.0, 10.0, 20.0, 50.0, 100.0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "gradual_dict['drifted'][0]:  <class 'list'> 11\n",
-      "gradual_dict['drifted'][0][0]:  <class 'numpy.ndarray'> 2500\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"gradual_dict['drifted'][0]: \", type(gradual_dict['drifted'][0]), len(gradual_dict['drifted'][0]))\n",
     "print(\"gradual_dict['drifted'][0][0]: \", type(gradual_dict['drifted'][0][0]), len(gradual_dict['drifted'][0][0]))"
@@ -74,20 +68,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "AlibiChiSquaredDetector()"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "detector = AlibiChiSquaredDetector()\n",
     "detector.fit(gradual_dict['orig'][0])"
@@ -134,7 +117,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.plot(p_s)"
+    "plt.plot(p_s)\n",
+    "plt.xticks(ticks=np.arange(len(target_percentages)), labels=target_percentages, rotation=60)\n",
+    "plt.savefig('figures/drift_detectors/alibi/chi2_finetuned_b.pdf', format='pdf')"
    ]
   },
   {
@@ -146,25 +131,11 @@
   }
  ],
  "metadata": {
-  "kernelspec": {
-   "display_name": "Python (EML4U)",
-   "language": "python",
-   "name": "eml4u"
-  },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
    "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "pygments_lexer": "ipython3"
   }
  },
  "nbformat": 4,
  "nbformat_minor": 4
 }
-
