--- a/Drift experiments FCIT.ipynb
+++ b/Drift experiments FCIT.ipynb
@@ -24,8 +24,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('data/movies/embeddings/amazon_small_gradual_drift.pickle', 'rb') as handle:\n",
-    "    gradual_dict = pickle.load(handle)"
+    "with open('data/movies/embeddings/amazon_small_gradual_drift_100.pickle', 'rb') as handle:\n",
+    "    gradual_dict = pickle.load(handle)\n",
+    "    \n",
+    "target_percentages = [0, 0.005, 0.01, 0.02, 0.04, 0.1, 0.2, 0.4, 0.6, 0.8, 1.0, 2.0, 4.0, 10.0, 20.0, 50.0, 100.0]"
    ]
   },
   {
@@ -77,7 +79,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.plot(p_s)"
+    "plt.plot(p_s)\n",
+    "plt.savefig('figures/drift_detectors/fcit/drift-100.pdf', format='pdf')"
    ]
   }
  ],
