--- a/Ground Truth calc.ipynb
+++ b/Ground Truth calc.ipynb
@@ -33,7 +33,7 @@
     "def train_on_year(embeddings, keys, year):\n",
     "    nth_year = [x for x in list(zip(embeddings, keys)) if keys[0][-1] + timedelta(days=365*year) < x[1][-1] < keys[0][-1] + timedelta(days=365*(year+1))] # gather amazon reviews of the third year only\n",
     "    nth_year = [list(t) for t in zip(*nth_year)]\n",
-    "    nth_year[1] = [x[1] for x in nth_year[1]] # fix class names from 1..5 to 0..4 for easier 1-hot encoding\n",
+    "    nth_year[1] = [x[1] for x in nth_year[1]]\n",
     "    \n",
     "    X_train, X_test, y_train, y_test = train_test_split(nth_year[0], nth_year[1], test_size=0.33, random_state=42)\n",
     "    s = ScorePredictor()\n",
@@ -89,6 +89,7 @@
    "outputs": [],
    "source": [
     "plt.plot(np.array(results[10]))\n",
+    "plt.yticks(np.arange(0.1, 0.6, step=0.05))\n",
     "plt.show()"
    ]
   },
@@ -99,6 +100,7 @@
    "outputs": [],
    "source": [
     "plt.plot(np.array(results[11]))\n",
+    "plt.yticks(np.arange(0.1, 0.6, step=0.05))\n",
     "plt.show()"
    ]
   },
@@ -109,6 +111,7 @@
    "outputs": [],
    "source": [
     "plt.plot(np.array(results[7]))\n",
+    "plt.yticks(np.arange(0.1, 0.6, step=0.05))\n",
     "plt.show()"
    ]
   },
@@ -119,8 +122,25 @@
    "outputs": [],
    "source": [
     "plt.plot(np.array(results[6]))\n",
+    "plt.yticks(np.arange(0.1, 0.6, step=0.05))\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = 5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
