--- a/Drift experiments Cosine.ipynb
+++ b/Drift experiments Cosine.ipynb
@@ -8,7 +8,8 @@
    "source": [
     "import pickle\n",
     "from detectors.CosineDetector import CosineSimilarityDriftDetector\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np"
    ]
   },
   {
@@ -24,8 +25,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('data/movies/embeddings/amazon_small_gradual_drift.pickle', 'rb') as handle:\n",
-    "    gradual_dict = pickle.load(handle)"
+    "with open('data/movies/embeddings/amazon_bert_finetuned_b.pickle', 'rb') as handle:\n",
+    "    gradual_dict = pickle.load(handle)\n",
+    "    \n",
+    "target_percentages = [0, 0.005, 0.01, 0.02, 0.04, 0.1, 0.2, 0.4, 0.6, 0.8, 1.0, 2.0, 4.0, 10.0, 20.0, 50.0, 100.0]"
    ]
   },
   {
@@ -77,7 +80,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.plot(p_s)"
+    "plt.plot(p_s)\n",
+    "plt.xticks(ticks=np.arange(len(target_percentages)), labels=target_percentages, rotation=60)\n",
+    "plt.savefig('figures/drift_detectors/cosine/finetuned_b.pdf', format='pdf')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot([1-x for x in p_s])\n",
+    "plt.yscale('log')\n",
+    "plt.xticks(ticks=np.arange(len(target_percentages)), labels=target_percentages, rotation=60)\n",
+    "plt.savefig('figures/drift_detectors/cosine/finetuned_b-log.pdf', format='pdf')"
    ]
   },
   {
