--- a/Drift experiments KernelTwosample.ipynb
+++ b/Drift experiments KernelTwosample.ipynb
@@ -8,7 +8,9 @@
    "source": [
     "import pickle\n",
     "from detectors.KernelTwoSampleDetector import KernelTwoSampleDriftDetector\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "from numpy.polynomial.polynomial import polyfit\n",
+    "import numpy as np"
    ]
   },
   {
@@ -24,8 +26,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('data/movies/embeddings/amazon_small_gradual_drift.pickle', 'rb') as handle:\n",
-    "    gradual_dict = pickle.load(handle)"
+    "with open('data/movies/embeddings/amazon_bert_finetuned_b.pickle', 'rb') as handle:\n",
+    "    gradual_dict = pickle.load(handle)\n",
+    "    \n",
+    "target_percentages = [0, 0.005, 0.01, 0.02, 0.04, 0.1, 0.2, 0.4, 0.6, 0.8, 1.0, 2.0, 4.0, 10.0, 20.0, 50.0, 100.0]"
    ]
   },
   {
@@ -77,7 +81,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.plot(p_s)"
+    "plt.plot(p_s)\n",
+    "plt.xticks(ticks=np.arange(len(target_percentages)), labels=target_percentages, rotation=60)\n",
+    "plt.savefig('figures/drift_detectors/kerneltwosample/finetuned_b.pdf', format='pdf')"
    ]
   },
   {
