chi-squard fdr test

--- a/Drift experiments.ipynb
+++ b/Drift experiments.ipynb
@@ -66,7 +66,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Experiments"
+    "## Results"
    ]
   },
   {
@@ -88,6 +88,13 @@
     "if os.path.isfile(results_file):\n",
     "    with open(results_file, \"rb\") as handle:\n",
     "        results = pickle.load(handle)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Experiments"
    ]
   },
   {
@@ -349,6 +356,74 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from detectors.AlibiChiSquaredDetector import AlibiChiSquaredDetector\n",
+    "detector_id = \"AlibiChiSquaredDetector\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_id = \"bow_50\"\n",
+    "detector = AlibiChiSquaredDetector()\n",
+    "default_fit   (detector_id, detector, data_id, data[data_id]['orig'][0],    results, False)\n",
+    "default_detect(detector_id, detector, data_id, data[data_id]['drifted'][0], results, False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_id = \"bow_768\"\n",
+    "detector = AlibiChiSquaredDetector()\n",
+    "default_fit   (detector_id, detector, data_id, data[data_id]['orig'][0],    results, False)\n",
+    "default_detect(detector_id, detector, data_id, data[data_id]['drifted'][0], results, False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from detectors.AlibiChiSquaredDetector import AlibiChiSquaredDetector\n",
+    "detector_id = \"AlibiChiSquaredDetector-FDR\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_id = \"bow_50\"\n",
+    "detector = AlibiChiSquaredDetector(correction = \"fdr\")\n",
+    "default_fit   (detector_id, detector, data_id, data[data_id]['orig'][0],    results, False)\n",
+    "default_detect(detector_id, detector, data_id, data[data_id]['drifted'][0], results, False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_id = \"bow_768\"\n",
+    "detector = AlibiChiSquaredDetector(correction = \"fdr\")\n",
+    "default_fit   (detector_id, detector, data_id, data[data_id]['orig'][0],    results, False)\n",
+    "default_detect(detector_id, detector, data_id, data[data_id]['drifted'][0], results, False)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -364,6 +439,27 @@
     "# Save results\n",
     "with open(results_file, \"wb\") as handle:\n",
     "    pickle.dump(results, handle)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Print results\n",
+    "if(True):\n",
+    "    print(\"Runtimes (fit and detect) in minutes:\")\n",
+    "    from pprint import pprint\n",
+    "    for data_id in results:\n",
+    "        times = {}\n",
+    "        for detector_id in results[data_id]:\n",
+    "            time = 0\n",
+    "            for key in results[data_id][detector_id]:\n",
+    "                if(key == \"time_detect\" or key == \"time_fit\"):\n",
+    "                    time += results[data_id][detector_id][key]\n",
+    "            times[detector_id] = time/60\n",
+    "        pprint(sorted(times.items(), key=lambda item: item[1]))"
    ]
   },
   {
