--- a/Drift experiments figures.ipynb
+++ b/Drift experiments figures.ipynb
@@ -60,6 +60,7 @@
       " AlibiMMDDetector\n",
       " AlibiLSDDDetector\n",
       " AlibiChiSquaredDetector\n",
+      " AlibiChiSquaredDetector-FDR\n",
       "bow_768\n",
       " AlibiKSDetector\n",
       " CosineDetector\n",
@@ -97,12 +98,13 @@
     "if(plot_images):\n",
     "    linewidth=1.5\n",
     "    fig, ax = plt.subplots()\n",
-    "    ax.plot(x, results[\"bow_50\"][\"CosineDetector\"][\"predictions\"], label='Cosine', color='tab:purple', linewidth=linewidth)\n",
+    "    #ax.plot(x, results[\"bow_50\"][\"CosineDetector\"][\"predictions\"], label='Cosine', color='tab:purple', linewidth=linewidth)\n",
     "    ax.plot(x, results[\"bow_50\"][\"AlibiKSDetector\"][\"predictions\"], label='KS', color='tab:green', linewidth=linewidth)\n",
     "    ax.plot(x, results[\"bow_50\"][\"AlibiLSDDDetector\"][\"predictions\"], label='LSDD', color='tab:orange', linewidth=linewidth)\n",
     "    ax.plot(x, results[\"bow_50\"][\"AlibiMMDDetector\"][\"predictions\"], '--', label='MMD', color='tab:brown', linewidth=linewidth)\n",
     "    ax.plot(x, results[\"bow_50\"][\"FCITDetector\"][\"predictions\"], ':', label='FCIT', color='tab:blue', linewidth=linewidth)\n",
     "    ax.plot(x, results[\"bow_50\"][\"AlibiChiSquaredDetector\"][\"predictions\"], label='ChiSquared', color='tab:red', linewidth=linewidth)\n",
+    "    #ax.plot(x, results[\"bow_50\"][\"AlibiChiSquaredDetector-FDR\"][\"predictions\"], ':', label='ChiSquared', color='tab:red', linewidth=linewidth)\n",
     "    plt.legend(loc='center right')\n",
     "    ax.set(xlabel='Percentage of injected negative words', ylabel='p-value',\n",
     "           title='Drift detection: Bag of Words with 50 dimensions')\n",
@@ -136,7 +138,7 @@
     "if(plot_images):\n",
     "    linewidth=1.5\n",
     "    fig, ax = plt.subplots()\n",
-    "    ax.plot(x, results[\"bow_768\"][\"CosineDetector\"][\"predictions\"], label='Cosine', color='tab:purple', linewidth=linewidth)\n",
+    "    #ax.plot(x, results[\"bow_768\"][\"CosineDetector\"][\"predictions\"], label='Cosine', color='tab:purple', linewidth=linewidth)\n",
     "    ax.plot(x, results[\"bow_768\"][\"AlibiKSDetector\"][\"predictions\"], label='KS', color='tab:green', linewidth=linewidth)\n",
     "    ax.plot(x, results[\"bow_768\"][\"AlibiLSDDDetector\"][\"predictions\"], label='LSDD', color='tab:orange', linewidth=linewidth)\n",
     "    ax.plot(x, results[\"bow_768\"][\"AlibiMMDDetector\"][\"predictions\"], '--', label='MMD', color='tab:brown', linewidth=linewidth)\n",
@@ -210,6 +212,10 @@
       "\n",
       "AlibiChiSquaredDetector\n",
       "Runtime 2258.7252547740936 0.06413960456848145\n",
+      "Predictions [0.49575776, 0.4971542, 0.496436, 0.49603707, 0.49587762, 0.4969946, 0.49627647, 0.49639624, 0.49587762, 0.4967552, 0.49631634, 0.49603713, 0.49623656, 0.49571797, 0.49687484, 0.49619672, 0.49579772, 0.49639618, 0.49671537, 0.49627647, 0.49579775]\n",
+      "\n",
+      "AlibiChiSquaredDetector-FDR\n",
+      "Runtime 2263.1875636577606 0.0655508041381836\n",
       "Predictions [0.49575776, 0.4971542, 0.496436, 0.49603707, 0.49587762, 0.4969946, 0.49627647, 0.49639624, 0.49587762, 0.4967552, 0.49631634, 0.49603713, 0.49623656, 0.49571797, 0.49687484, 0.49619672, 0.49579772, 0.49639618, 0.49671537, 0.49627647, 0.49579775]\n"
      ]
     }
@@ -373,6 +379,7 @@
       " ('AlibiLSDDDetector', 1.1471850713094076),\n",
       " ('FCITDetector', 8.06465163230896),\n",
       " ('AlibiChiSquaredDetector', 37.64648990631103),\n",
+      " ('AlibiChiSquaredDetector-FDR', 37.720885241031645),\n",
       " ('AlibiMMDDetector', 54.174930930137634)]\n",
       "[('CosineDetector', 0.11988515059153239),\n",
       " ('AlibiLSDDDetector', 1.000870144367218),\n",
@@ -395,6 +402,18 @@
     "                    time += results[data_id][detector_id][key]\n",
     "            times[detector_id] = time/60\n",
     "        pprint(sorted(times.items(), key=lambda item: item[1]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Print results\n",
+    "if(False):\n",
+    "    from pprint import pprint\n",
+    "    pprint(results)"
    ]
   },
   {
