CDBD with SVM confidence score and p-value, results on 10k data

--- a/Drift experiments CDBD.ipynb
+++ b/Drift experiments CDBD.ipynb
@@ -51,7 +51,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file = '../data/amazon_bert_finetuned.pickle'\n",
+    "# file = '../data/amazon_bert_finetuned.pickle'\n",
+    "# file = '../data/amazon_drift_bow_50.pickle'\n",
+    "file = '../data/amazon_drift_bow_768.pickle'\n",
     "\n",
     "# load the data\n",
     "with open(file, 'rb') as handle:\n",
@@ -80,15 +82,8 @@
     "x_train, x_test, y_train, y_test = train_test_split(features, targets, test_size=0.33, random_state=42)\n",
     "\n",
     "# train a model\n",
-    "n_estimators = 30\n",
     "model = None\n",
-    "model = RandomForestClassifier(bootstrap=True,\n",
-    "    criterion=\"entropy\",\n",
-    "    # max_depth=10,\n",
-    "    n_estimators=n_estimators,\n",
-    "    random_state=42,\n",
-    "    verbose=0,\n",
-    "    warm_start=False)\n",
+    "model = SVC(kernel='linear') # SVM model\n",
     "model.fit(x_train, y_train)\n",
     "acc = model.score(x_test, y_test)\n",
     "# print(\"acc of the model on training data \", acc)"
