calculating means of detectors and models

--- a/evaluation_metric.ipynb
+++ b/evaluation_metric.ipynb
@@ -206,6 +206,8 @@
     "\n",
     "# prints lists of tuples\n",
     "def print_eval(eval_results, reverse=False):\n",
+    "    \n",
+    "    # Notebook print\n",
     "    print()\n",
     "    if(reverse):\n",
     "        print(\"Final scores (higher values are better)\")\n",
@@ -215,7 +217,41 @@
     "        print(data_id)\n",
     "        sorted_results = sorted(eval_results[data_id].items(), key=lambda item: item[1], reverse=reverse)\n",
     "        for i in range(len(sorted_results)):\n",
-    "            print(str(\"{:.4f}\".format(sorted_results[i][1])).zfill(10), sorted_results[i][0])"
+    "            print(str(\"{:.4f}\".format(sorted_results[i][1])).zfill(10), sorted_results[i][0])\n",
+    "\n",
+    "    # Raw print\n",
+    "    if(False):\n",
+    "        import pprint\n",
+    "        pprint.pprint(eval_results)\n",
+    "    \n",
+    "    # Table\n",
+    "    table_detectors = {}\n",
+    "    table_detectors['AlibiKSDetector'] = 'KS'\n",
+    "    table_detectors['AlibiLSDDDetector'] = 'LSDD'\n",
+    "    table_detectors['AlibiMMDDetector'] = 'MMD'\n",
+    "    #table_models = {}\n",
+    "    #table_models['bow_50'] = 'BoW 50'\n",
+    "    #table_models['bow_768'] = 'BoW 768'\n",
+    "    \n",
+    "    # means\n",
+    "    data_sum = {}\n",
+    "    data_count = {}\n",
+    "    detector_sum = {}\n",
+    "    detector_count = {}\n",
+    "    for data_id in eval_results:\n",
+    "        for detector_id in eval_results[data_id]:\n",
+    "            if detector_id in table_detectors:\n",
+    "                data_sum[data_id] = data_sum.get(data_id, 0) + eval_results[data_id][detector_id]\n",
+    "                data_count[data_id] = data_count.get(data_id, 0) + 1\n",
+    "                detector_sum[detector_id] = detector_sum.get(detector_id, 0) + eval_results[data_id][detector_id]\n",
+    "                detector_count[detector_id] = detector_count.get(detector_id, 0) + 1\n",
+    "    #print(data_sum)\n",
+    "    #print(data_count)\n",
+    "    print({k: float(data_sum[k])/data_count[k] for k in data_sum})\n",
+    "    #print()\n",
+    "    #print(detector_sum)\n",
+    "    #print(detector_count)\n",
+    "    print({k: float(detector_sum[k])/detector_count[k] for k in detector_sum})"
    ]
   },
   {
@@ -245,7 +281,9 @@
       "-0000.6412 fake2\n",
       "-0000.5885 AlibiLSDDDetector\n",
       "-0000.4278 AlibiKSDetector\n",
-      "00000.2030 bad\n"
+      "00000.2030 bad\n",
+      "{'bow_50': -0.6494791620416301, 'bow_768': -0.5690505210773812}\n",
+      "{'AlibiKSDetector': -0.48941357194809687, 'AlibiMMDDetector': -0.6953809527907343, 'AlibiLSDDDetector': -0.6429999999396858}\n"
      ]
     }
    ],
@@ -289,7 +327,9 @@
       "00000.9152 AlibiKSDetector\n",
       "00000.9510 AlibiLSDDDetector\n",
       "00001.2625 bad\n",
-      "00001.2865 AlibiMMDDetector\n"
+      "00001.2865 AlibiMMDDetector\n",
+      "{'bow_50': 0.9419699765120942, 'bow_768': 1.0509100618151328}\n",
+      "{'AlibiKSDetector': 0.9795700520277023, 'AlibiMMDDetector': 1.0965000055264682, 'AlibiLSDDDetector': 0.9132499999366701}\n"
      ]
     }
    ],
@@ -513,7 +553,9 @@
       "00000.2998 AlibiLSDDDetector\n",
       "00000.2571 AlibiMMDDetector\n",
       "00000.1014 AlibiKSDetector\n",
-      "-0001.0000 bad\n"
+      "-0001.0000 bad\n",
+      "{'bow_50': 0.5899547306528287, 'bow_768': 0.21942041206144322}\n",
+      "{'AlibiKSDetector': 0.1631664030900068, 'AlibiMMDDetector': 0.5079751247124664, 'AlibiLSDDDetector': 0.5429211862689346}\n"
      ]
     },
     {
