--- a/Drift experiments figures.ipynb
+++ b/Drift experiments figures.ipynb
@@ -9,9 +9,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/eml4u/EML4U/data/amazon/results_a\n"
+     ]
+    }
+   ],
    "source": [
     "# Disable plots for git (use saved images to share)\n",
     "plot_images = False\n",
@@ -30,17 +38,39 @@
     "results_bow768_image = os.path.join(config[\"EXPERIMENTS_DIRECTORY\"], \"results_a_bow768.png\")\n",
     "\n",
     "# Load data\n",
-    "print(results_file)\n",
-    "if os.path.isfile(results_file):\n",
-    "    with open(results_file, \"rb\") as handle:\n",
-    "        results = pickle.load(handle)"
+    "def loaddata():\n",
+    "    print(results_file)\n",
+    "    if os.path.isfile(results_file):\n",
+    "        with open(results_file, \"rb\") as handle:\n",
+    "            return pickle.load(handle)\n",
+    "results = loaddata()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "bow_50\n",
+      " AlibiKSDetector\n",
+      " CosineDetector\n",
+      " FCITDetector\n",
+      " AlibiMMDDetector\n",
+      " AlibiLSDDDetector\n",
+      " AlibiChiSquaredDetector\n",
+      " AlibiChiSquaredDetector-FDR\n",
+      "bow_768\n",
+      " AlibiKSDetector\n",
+      " CosineDetector\n",
+      " AlibiMMDDetector\n",
+      " AlibiLSDDDetector\n"
+     ]
+    }
+   ],
    "source": [
     "# Data overview\n",
     "for data_id in results:\n",
@@ -51,7 +81,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if(False):\n",
+    "    # Remove cosine similarity, as it contains no p-values\n",
+    "    del results[\"bow_50\"][\"CosineDetector\"]\n",
+    "    del results[\"bow_768\"][\"CosineDetector\"]\n",
+    "\n",
+    "    # Remove AlibiChiSquaredDetector, as every value is around 0.5\n",
+    "    del results[\"bow_50\"][\"AlibiChiSquaredDetector\"]\n",
+    "    del results[\"bow_50\"][\"AlibiChiSquaredDetector-FDR\"]\n",
+    "\n",
+    "    # Remove FCIT, as all results are near 0\n",
+    "    del results[\"bow_50\"][\"FCITDetector\"]\n",
+    "\n",
+    "    # Data overview\n",
+    "    for data_id in results:\n",
+    "        print(data_id)\n",
+    "        for x in results[data_id]:\n",
+    "            print(\"\", x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,28 +125,20 @@
     "if(plot_images):\n",
     "    linewidth=1.5\n",
     "    fig, ax = plt.subplots()\n",
-    "    #ax.plot(x, results[\"bow_50\"][\"CosineDetector\"][\"predictions\"], label='Cosine', color='tab:purple', linewidth=linewidth)\n",
-    "    ax.plot(x, results[\"bow_50\"][\"AlibiKSDetector\"][\"predictions\"], label='KS', color='tab:green', linewidth=linewidth)\n",
-    "    ax.plot(x, results[\"bow_50\"][\"AlibiLSDDDetector\"][\"predictions\"], label='LSDD', color='tab:orange', linewidth=linewidth)\n",
-    "    ax.plot(x, results[\"bow_50\"][\"AlibiMMDDetector\"][\"predictions\"], '--', label='MMD', color='tab:brown', linewidth=linewidth)\n",
-    "    ax.plot(x, results[\"bow_50\"][\"FCITDetector\"][\"predictions\"], ':', label='FCIT', color='tab:blue', linewidth=linewidth)\n",
-    "    ax.plot(x, results[\"bow_50\"][\"AlibiChiSquaredDetector\"][\"predictions\"], label='ChiSquared', color='tab:red', linewidth=linewidth)\n",
-    "    #ax.plot(x, results[\"bow_50\"][\"AlibiChiSquaredDetector-FDR\"][\"predictions\"], ':', label='ChiSquared', color='tab:red', linewidth=linewidth)\n",
-    "    plt.legend(loc='center right')\n",
-    "    ax.set(xlabel='Percentage of injected negative words', ylabel='p-value',\n",
-    "           title='Drift detection: Bag of Words with 50 dimensions')\n",
+    "    \n",
+    "    ax.plot(x, results[\"bow_50\"][\"AlibiKSDetector\"][\"predictions\"],   '-.', label='KS',   linewidth=linewidth, color='tab:green')\n",
+    "    ax.plot(x, results[\"bow_50\"][\"AlibiLSDDDetector\"][\"predictions\"], '-',  label='LSDD', linewidth=linewidth, color='tab:orange')\n",
+    "    ax.plot(x, results[\"bow_50\"][\"AlibiMMDDetector\"][\"predictions\"],  '--', label='MMD',  linewidth=linewidth, color='tab:blue')\n",
+    "    \n",
+    "    plt.legend(loc='upper right')\n",
+    "    ax.set(xlabel='Percentage of injected negative words', ylabel='p-value')\n",
+    "    #ax.set(title='Drift detection: Bag of Words with 50 dimensions')\n",
     "    ax.grid(color='#dddddd')\n",
     "    ax.xaxis.set_minor_locator(AutoMinorLocator(4))\n",
+    "    ax.set_xlim([0, 0.5])\n",
+    "    ax.set_ylim([-0.025, 1])\n",
     "    \n",
-    "    #ax.grid(b=True, linestyle='-', linewidth=1, which=\"both\")\n",
-    "    #plt.tick_params(which='major', length=11, color='r')\n",
-    "    #plt.tick_params(which='minor', length=4, color='r')\n",
-    "    #ax.grid(which='major', b=True)\n",
-    "    #ax.grid(which='minor', b=True)\n",
-    "    #plt.xticks(x)\n",
-    "    #plt.minorticks_on()\n",
-    "    #plt.tick_params(axis='x', which='major', bottom=True)\n",
-    "\n",
+    "    fig.tight_layout()\n",
     "    fig.savefig(results_bow50_pdf)\n",
     "    fig.savefig(results_bow50_image, dpi=150)\n",
     "    plt.show()"
@@ -99,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,18 +157,31 @@
     "if(plot_images):\n",
     "    linewidth=1.5\n",
     "    fig, ax = plt.subplots()\n",
-    "    #ax.plot(x, results[\"bow_768\"][\"CosineDetector\"][\"predictions\"], label='Cosine', color='tab:purple', linewidth=linewidth)\n",
-    "    ax.plot(x, results[\"bow_768\"][\"AlibiKSDetector\"][\"predictions\"], label='KS', color='tab:green', linewidth=linewidth)\n",
-    "    ax.plot(x, results[\"bow_768\"][\"AlibiLSDDDetector\"][\"predictions\"], label='LSDD', color='tab:orange', linewidth=linewidth)\n",
-    "    ax.plot(x, results[\"bow_768\"][\"AlibiMMDDetector\"][\"predictions\"], '--', label='MMD', color='tab:brown', linewidth=linewidth)\n",
-    "    plt.legend(loc='center right')\n",
-    "    ax.set(xlabel='Percentage of injected negative words', ylabel='p-value',\n",
-    "           title='Drift detection: Bag of Words with 768 dimensions')\n",
+    "    \n",
+    "    ax.plot(x, results[\"bow_768\"][\"AlibiKSDetector\"][\"predictions\"],   '-.', label='KS',   linewidth=linewidth, color='tab:green')\n",
+    "    ax.plot(x, results[\"bow_768\"][\"AlibiLSDDDetector\"][\"predictions\"], '-',  label='LSDD', linewidth=linewidth, color='tab:orange')\n",
+    "    ax.plot(x, results[\"bow_768\"][\"AlibiMMDDetector\"][\"predictions\"],  '--', label='MMD',  linewidth=linewidth, color='tab:blue')\n",
+    "    \n",
+    "    plt.legend(loc='upper right')\n",
+    "    ax.set(xlabel='Percentage of injected negative words', ylabel='p-value')\n",
+    "    #ax.set(title='Drift detection: Bag of Words with 768 dimensions')\n",
     "    ax.grid(color='#dddddd')\n",
     "    ax.xaxis.set_minor_locator(AutoMinorLocator(4))\n",
+    "    ax.set_xlim([0, 0.5])\n",
+    "    ax.set_ylim([-0.025, 1])\n",
+    "    \n",
+    "    fig.tight_layout()\n",
     "    fig.savefig(results_bow768_pdf)\n",
     "    fig.savefig(results_bow768_image, dpi=150)\n",
+    "    \n",
     "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# First prototypes"
    ]
   },
   {
@@ -133,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,16 +213,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "bow_50\n",
+      "\n",
+      "AlibiKSDetector\n",
+      "Runtime 6.28516960144043 6.246566772460938e-05\n",
+      "Predictions [0.51078886, 0.40789464, 0.37253818, 0.33638242, 0.2744994, 0.25984728, 0.23708226, 0.21869467, 0.20442879, 0.165477, 0.16117598, 0.13752618, 0.13512623, 0.12036519, 0.09977074, 0.09861998, 0.09784328, 0.079722695, 0.09069573, 0.08291133, 0.075421974]\n",
+      "\n",
+      "CosineDetector\n",
+      "Runtime 5.943364858627319 0.006986141204833984\n",
+      "Predictions [0.9989252, 0.99872714, 0.9984572, 0.99807703, 0.9976228, 0.9969852, 0.9962551, 0.9953646, 0.9945061, 0.9933997, 0.9922485, 0.9910583, 0.9897113, 0.9883817, 0.98679733, 0.98516333, 0.9835125, 0.9815969, 0.97976726, 0.9778374, 0.97567135]\n",
+      "\n",
+      "FCITDetector\n",
+      "Runtime 483.87776589393616 0.0013320446014404297\n",
+      "Predictions [9.713941234650133e-06, 0.0005125054589427554, 7.143366800832564e-05, 0.00015029437346598078, 9.527222561590889e-06, 0.0015207194594144757, 8.38207643355886e-06, 8.713528820263508e-05, 0.00018864406113537383, 0.00016513465971875214, 0.0002937245571760743, 8.681195378110121e-05, 0.0007190441868918988, 0.0009804558879240358, 3.0387509687148454e-06, 0.00010800101403999513, 0.00024750220449508084, 0.00013708738345238948, 0.003900579969107685, 9.03351324102659e-05, 0.0001025826263131577]\n",
+      "\n",
+      "AlibiMMDDetector\n",
+      "Runtime 3234.7483360767365 15.747519731521606\n",
+      "Predictions [0.8199999928474426, 0.2199999988079071, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0]\n",
+      "\n",
+      "AlibiLSDDDetector\n",
+      "Runtime 52.9299418926239 15.901162385940552\n",
+      "Predictions [0.8500000238418579, 0.2199999988079071, 0.019999999552965164, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0]\n",
+      "\n",
+      "AlibiChiSquaredDetector\n",
+      "Runtime 2258.7252547740936 0.06413960456848145\n",
+      "Predictions [0.49575776, 0.4971542, 0.496436, 0.49603707, 0.49587762, 0.4969946, 0.49627647, 0.49639624, 0.49587762, 0.4967552, 0.49631634, 0.49603713, 0.49623656, 0.49571797, 0.49687484, 0.49619672, 0.49579772, 0.49639618, 0.49671537, 0.49627647, 0.49579775]\n",
+      "\n",
+      "AlibiChiSquaredDetector-FDR\n",
+      "Runtime 2263.1875636577606 0.0655508041381836\n",
+      "Predictions [0.49575776, 0.4971542, 0.496436, 0.49603707, 0.49587762, 0.4969946, 0.49627647, 0.49639624, 0.49587762, 0.4967552, 0.49631634, 0.49603713, 0.49623656, 0.49571797, 0.49687484, 0.49619672, 0.49579772, 0.49639618, 0.49671537, 0.49627647, 0.49579775]\n"
+     ]
+    }
+   ],
    "source": [
     "print_results(\"bow_50\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,12 +308,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "if(plot_images):\n",
     "    plt.plot(results[\"bow_50\"][\"AlibiChiSquaredDetector\"][\"predictions\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if(plot_images):\n",
+    "    plt.plot(results[\"bow_50\"][\"AlibiChiSquaredDetector-FDR\"][\"predictions\"])"
    ]
   },
   {
@@ -229,16 +335,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "bow_768\n",
+      "\n",
+      "AlibiKSDetector\n",
+      "Runtime 78.06494069099426 4.649162292480469e-05\n",
+      "Predictions [0.51008314, 0.49886286, 0.4815251, 0.46080306, 0.44444004, 0.42147303, 0.40360108, 0.37133455, 0.34559998, 0.32888284, 0.31053445, 0.2856724, 0.2656401, 0.24574478, 0.23950554, 0.2210834, 0.21252106, 0.1946199, 0.18059862, 0.1687605, 0.16253084]\n",
+      "\n",
+      "CosineDetector\n",
+      "Runtime 7.180832147598267 0.012276887893676758\n",
+      "Predictions [0.99790823, 0.99789876, 0.9978256, 0.9977554, 0.9976584, 0.9975157, 0.99735415, 0.99716794, 0.9969376, 0.99670625, 0.99643385, 0.9961323, 0.9957928, 0.99553275, 0.9951681, 0.9947151, 0.9942925, 0.9938109, 0.9933638, 0.9928708, 0.99228996]\n",
+      "\n",
+      "AlibiMMDDetector\n",
+      "Runtime 3367.0329155921936 16.759654760360718\n",
+      "Predictions [0.4099999964237213, 0.3700000047683716, 0.23999999463558197, 0.11999999731779099, 0.05999999865889549, 0.009999999776482582, 0.009999999776482582, 0.009999999776482582, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0]\n",
+      "\n",
+      "AlibiLSDDDetector\n",
+      "Runtime 43.56562066078186 16.48658800125122\n",
+      "Predictions [0.6499999761581421, 0.6800000071525574, 0.4399999976158142, 0.5, 0.2800000011920929, 0.2199999988079071, 0.14000000059604645, 0.20000000298023224, 0.05999999865889549, 0.07000000029802322, 0.03999999910593033, 0.05999999865889549, 0.009999999776482582, 0.009999999776482582, 0.0, 0.0, 0.009999999776482582, 0.0, 0.0, 0.0, 0.009999999776482582]\n"
+     ]
+    }
+   ],
    "source": [
     "print_results(\"bow_768\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,9 +408,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Runtimes (fit and detect) in minutes:\n",
+      "[('CosineDetector', 0.09917251666386923),\n",
+      " ('AlibiKSDetector', 0.1047538677851359),\n",
+      " ('AlibiLSDDDetector', 1.1471850713094076),\n",
+      " ('FCITDetector', 8.06465163230896),\n",
+      " ('AlibiChiSquaredDetector', 37.64648990631103),\n",
+      " ('AlibiChiSquaredDetector-FDR', 37.720885241031645),\n",
+      " ('AlibiMMDDetector', 54.174930930137634)]\n",
+      "[('CosineDetector', 0.11988515059153239),\n",
+      " ('AlibiLSDDDetector', 1.000870144367218),\n",
+      " ('AlibiKSDetector', 1.3010831197102866),\n",
+      " ('AlibiMMDDetector', 56.39654283920924)]\n"
+     ]
+    }
+   ],
    "source": [
     "# Print results\n",
     "if(True):\n",
@@ -299,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -318,11 +467,25 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python (EML4U)",
+   "language": "python",
+   "name": "eml4u"
+  },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "pygments_lexer": "ipython3"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
  "nbformat_minor": 4
 }
+
