Update to CDBD, laplace 1, n_batch 20, multi run 10

--- a/Drift experiments CDBD.ipynb
+++ b/Drift experiments CDBD.ipynb
@@ -15,7 +15,7 @@
   "orig_nbformat": 4,
   "kernelspec": {
    "name": "python3",
-   "display_name": "Python 3.8.5 64-bit ('Drift-detector-comparison-xdlKOLuj': pipenv)"
+   "display_name": "Python 3.8.5 64-bit ('Drift-detector-comparison-xdlKOLuj': venv)"
   },
   "interpreter": {
    "hash": "35a0ec09d1959f20cbbe90c6dbdd3d7764580d4185c8646dea867f08ccf47c05"
@@ -26,14 +26,27 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "ImportError",
+     "evalue": "cannot import name 'CDBDDetector' from 'detectors.CDBDDetector' (/home/mhshaker/Documents/projects/EML4U/Drift-detector-comparison/detectors/CDBDDetector.py)",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-ff2aa53dd1f2>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mpickle\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mmatplotlib\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpyplot\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mplt\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mdetectors\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mCDBDDetector\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mCDBD\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mensemble\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mRandomForestClassifier\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmodel_selection\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mtrain_test_split\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/Documents/projects/EML4U/Drift-detector-comparison/detectors/__init__.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0;34m.\u001b[0m\u001b[0mAlibiChiSquaredDetector\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mAlibiChiSquaredDetector\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0;34m.\u001b[0m\u001b[0mFCITDetector\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mFCITDriftDetector\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0;34m.\u001b[0m\u001b[0mCDBDDetector\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mCDBDDetector\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m: cannot import name 'CDBDDetector' from 'detectors.CDBDDetector' (/home/mhshaker/Documents/projects/EML4U/Drift-detector-comparison/detectors/CDBDDetector.py)"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import pickle\n",
     "import matplotlib.pyplot as plt\n",
-    "from detectors.CDBDDetector import CDBD\n",
+    "from detectors.CDBDDetector import CDBDDetector\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.model_selection import train_test_split"
    ]
@@ -102,7 +115,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "detector = CDBD(model)\n",
+    "detector = CDBDDetector(model)\n",
     "detector.fit(x_test)"
    ]
   },
