experiments: added cdbd tests

--- a/Drift experiments.ipynb
+++ b/Drift experiments.ipynb
@@ -424,6 +424,39 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from detectors.CDBDDetector import CDBDDetector\n",
+    "import numpy as np\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.svm import SVC\n",
+    "detector_id = \"CDBDDetector\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_id = \"bow_50\"\n",
+    "\n",
+    "features = data[data_id]['train'][0]\n",
+    "targets = np.array(data[data_id]['train'][1])[:,1] # take the labels from dictionary, convert to np.array and slice to only get the scores\n",
+    "targets = targets.astype('int')\n",
+    "x_train, x_test, y_train, y_test = train_test_split(features, targets, test_size=0.33, shuffle=False)\n",
+    "model = SVC(kernel='linear', random_state=42) # SVM model\n",
+    "model.fit(x_train, y_train)\n",
+    "\n",
+    "detector = CDBDDetector(model)\n",
+    "default_fit   (detector_id, detector, data_id, data[data_id]['orig'][0],    results, True)\n",
+    "default_detect(detector_id, detector, data_id, data[data_id]['drifted'][0], results, True)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -483,11 +516,25 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python (EML4U)",
+   "language": "python",
+   "name": "eml4u"
+  },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "pygments_lexer": "ipython3"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
  "nbformat_minor": 4
 }
+
