all results amazon drift induction

--- a/amazon_drift_induction.ipynb
+++ b/amazon_drift_induction.ipynb
@@ -20,10 +20,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def time_fit(det, data):\n",
+    "def time_fit(det, data, labels):\n",
     "    time_begin = time.time()\n",
     "        \n",
-    "    det = det.fit(np.array(data))\n",
+    "    det = det.fit(np.array(data), targets=np.array(labels))\n",
     "    \n",
     "    return det, time.time() - time_begin\n",
     "\n",
