dimension reduction pca

--- a/Drift experiments.ipynb
+++ b/Drift experiments.ipynb
@@ -19,9 +19,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "bow_50_file /home/eml4u/EML4U/data/amazon/amazon_drift_bow_50.pickle\n",
+      "bow_768_file /home/eml4u/EML4U/data/amazon/amazon_drift_bow_768.pickle\n",
+      "Samples: 10000 10000 10000\n",
+      "Samples: 10000 10000 10000\n"
+     ]
+    }
+   ],
    "source": [
     "import yaml\n",
     "import os.path\n",
@@ -66,6 +77,85 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Dimension reduction"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.decomposition import PCA\n",
+    "import numpy as np\n",
+    "\n",
+    "# https://scikit-learn.org/stable/modules/generated/sklearn.decomposition.PCA.html\n",
+    "# https://scikit-learn.org/stable/auto_examples/decomposition/plot_pca_iris.html\n",
+    "def reduce_dim(data, target_dimensions, pca=None):\n",
+    "    \n",
+    "    # Recursive call for lists\n",
+    "    if(True):\n",
+    "        if isinstance(data, list):\n",
+    "            if(pca is None):\n",
+    "                pca = PCA(n_components=target_dimensions)\n",
+    "                pca.fit(data[0])\n",
+    "\n",
+    "            results = []\n",
+    "            for item in data:\n",
+    "                results.append(reduce_dim(item, target_dimensions, pca=pca))\n",
+    "            return results\n",
+    "    \n",
+    "    # Check if is 2-dimensional numpy array\n",
+    "    if not isinstance(data, np.ndarray) or data.ndim != 2:\n",
+    "        raise ValueError(type(data))\n",
+    "    \n",
+    "    if(pca is None):\n",
+    "        pca = PCA(n_components=target_dimensions)\n",
+    "        pca.fit(data)\n",
+    "    return pca.transform(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Changed results file to /home/eml4u/EML4U/data/amazon/results_reduction_test\n",
+      "Creating key bow_50_reduced\n",
+      "orig 10000 50\n",
+      "drifted 10000 50\n",
+      "train 10000 50\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Set data paths\n",
+    "results_file = os.path.join(config[\"EXPERIMENTS_DIRECTORY\"], \"results_reduction_test\")\n",
+    "print(\"Changed results file to\", results_file)\n",
+    "\n",
+    "# Create data\n",
+    "old_key = \"bow_768\"\n",
+    "new_key = \"bow_50_reduced\"\n",
+    "print(\"Creating key\", new_key)\n",
+    "data[new_key] = data[old_key].copy() # copy all\n",
+    "\n",
+    "for key in data[new_key]:\n",
+    "    # print(type(data[new_key][key]))  # tuple -> create new ones\n",
+    "    data[new_key][key] = (reduce_dim(data[new_key][key][0], 50), data[new_key][key][0])\n",
+    "    if isinstance(data[new_key][key][0], list):\n",
+    "        print(key, len(data[new_key][key][0][0]), len(data[new_key][key][0][0][1]))\n",
+    "    elif isinstance(data[new_key][key][0], np.ndarray):\n",
+    "        print(key, len(data[new_key][key][0]), len(data[new_key][key][0][1]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Results"
    ]
   },
@@ -80,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,6 +258,18 @@
    "outputs": [],
    "source": [
     "data_id = \"bow_50\"\n",
+    "detector = AlibiKSDetector()\n",
+    "default_fit   (detector_id, detector, data_id, data[data_id]['orig'][0],    results, False)\n",
+    "default_detect(detector_id, detector, data_id, data[data_id]['drifted'][0], results, False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_id = \"bow_50_reduced\"\n",
     "detector = AlibiKSDetector()\n",
     "default_fit   (detector_id, detector, data_id, data[data_id]['orig'][0],    results, False)\n",
     "default_detect(detector_id, detector, data_id, data[data_id]['drifted'][0], results, False)"
@@ -349,6 +451,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "data_id = \"bow_50_reduced\"\n",
+    "detector = AlibiLSDDDetector(backend='pytorch')\n",
+    "default_fit   (detector_id, detector, data_id, data[data_id]['orig'][0],    results, False)\n",
+    "default_detect(detector_id, detector, data_id, data[data_id]['drifted'][0], results, False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "data_id = \"bow_768\"\n",
     "detector = AlibiLSDDDetector(backend='pytorch')\n",
     "default_fit   (detector_id, detector, data_id, data[data_id]['orig'][0],    results, False)\n",
@@ -480,7 +594,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Print results\n",
+    "# Print runtimes\n",
     "if(True):\n",
     "    print(\"Runtimes (fit and detect) in minutes:\")\n",
     "    from pprint import pprint\n",
@@ -497,14 +611,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "bow_50 AlibiKSDetector\n",
+      " sum p-values: 4.1668124\n",
+      " [0.5108 0.4079 0.3725 0.3364] ... [0.5108 0.4079 0.3725 0.3364]\n",
+      "bow_50_reduced AlibiKSDetector\n",
+      " sum p-values: 6.132953\n",
+      " [0.509  0.4831 0.5102 0.4493] ... [0.509  0.4831 0.5102 0.4493]\n",
+      "bow_768 AlibiKSDetector\n",
+      " sum p-values: 6.753817\n",
+      " [0.5101 0.4989 0.4815 0.4608] ... [0.5101 0.4989 0.4815 0.4608]\n",
+      "\n",
+      "bow_50 AlibiLSDDDetector\n",
+      " sum p-values: 1.4399999678134918\n",
+      " [0.96 0.48 0.   0.  ] ... [0.96 0.48 0.   0.  ]\n",
+      "bow_50_reduced AlibiLSDDDetector\n",
+      " sum p-values: 1.4700000137090683\n",
+      " [0.69 0.18 0.23 0.18] ... [0.69 0.18 0.23 0.18]\n",
+      "bow_768 AlibiLSDDDetector\n",
+      " sum p-values: 2.5599999595433474\n",
+      " [0.59 0.43 0.31 0.29] ... [0.59 0.43 0.31 0.29]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Print results\n",
+    "# Print results to compare models\n",
+    "\n",
+    "def print_results(detector_id):\n",
+    "    for data_id in results:\n",
+    "        print(data_id, detector_id)\n",
+    "        print(\" sum p-values:\", np.sum(results[data_id][detector_id][\"predictions\"]))\n",
+    "        first = np.round(results[data_id][detector_id][\"predictions\"][:4], 4)\n",
+    "        last = np.round(results[data_id][detector_id][\"predictions\"][0:4], 4)\n",
+    "        print(\"\", first, \"...\", last)\n",
+    "\n",
     "if(True):\n",
-    "    from pprint import pprint\n",
-    "    pprint(results)"
+    "    print_results(\"AlibiKSDetector\")\n",
+    "    print()\n",
+    "    print_results(\"AlibiLSDDDetector\")"
    ]
   },
   {
