moving notebooks final-figs and score to evaluation-folder

--- a/evaluation/evaluation_metric.ipynb
+++ b/evaluation/evaluation_metric.ipynb
@@ -33,7 +33,7 @@
     "import pickle\n",
     "\n",
     "# Set data paths\n",
-    "config          = yaml.safe_load(open(\"config.yaml\", \"r\"))\n",
+    "config          = yaml.safe_load(open(\"../config.yaml\", \"r\"))\n",
     "results_file = os.path.join(config[\"EXPERIMENTS_DIRECTORY\"], \"results_a\")\n",
     "\n",
     "print(results_file)\n",
